Cambios ccs - Portada

--- a/css/eventosplaza.css
+++ b/css/eventosplaza.css
@@ -1,11 +1,29 @@
-.portada{
+.titulo {
+  font-size: 70px;
+}
+
+
+.title-a {
+  font-size:24px;
+}
+
+.title-b {
+  font-size:50px;
+}
+
+.guitarra h2 {
+  font-size: 35px;
+}
+
+.servicios {
+  color:brown;
+}
+
+.portada {
   background-image: url("../images/índice.jpeg");
-  background-size: center;
-  height:468px;
+  color:brown;
 }
 
 .menu {
-  position: block;
-  text-decoration: none;
-  color:brown;
+  font-size: 24px;
 }
