--- a/css/eventosplaza.css
+++ b/css/eventosplaza.css
@@ -156,6 +156,12 @@ body {
   flex-direction: column;
 }
 
+.col2 {
+  display: flex;
+  flex-direction: column;
+}
+
+
 .sexo, .intereses {
   margin-top: 15px;
 }
