--- a/css/eventosplaza.css
+++ b/css/eventosplaza.css
@@ -156,9 +156,11 @@ body {
   flex-direction: column;
 }
 
-.col2 {
+.comentarios {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+
 }
 
 
