--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,53 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?m9mjcb');
+  src:  url('../fonts/icomoon.eot?m9mjcb#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?m9mjcb') format('truetype'),
+    url('../fonts/icomoon.woff?m9mjcb') format('woff'),
+    url('../fonts/icomoon.svg?m9mjcb#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.icon-circle-right:before {
+  content: "\ea42";
+  position: absolute;
+  top: 50%;
+  right:8%;
+}
+.icon-circle-left:before {
+  content: "\ea44";
+  position: absolute;
+  top: 50%;
+  left:8%;
+}
+
+.icon {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 3rem;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: gray;
+}
+
 body {
   height: 100vh;
   font-size: .65rem;
@@ -9,14 +59,20 @@ body {
 }
 
 section {
+    margin:50px;
     flex:1;
     display: inline-block;
+    text-align: center;
+}
+
+#slider{
+  text-align: center;
+  position: relative;
 }
 
 .header {
   background-image: url("../images/colgantes.png");
   background-repeat: repeat-x;
-  height: 150px;
   position: relative;
 }
 
@@ -31,9 +87,8 @@ section {
 
 .header .menu {
   max-width: 100vw;
-  display: inline-block;
-  position: absolute;
-  top:60px;
+  position: relative;
+  padding-top:50px;
   left: 0;
   right: 0;
   margin:0 auto;
@@ -63,22 +118,7 @@ section {
 }
 
 
-.presentacion{
-  border: 1px solid red;
-  padding: 10px;
-  margin:10px;
-  height: 300px;
-  position: relative;
-}
 
-.carousel{
-  max-width: 100vw;
-  position: absolute;
-  left: 0;
-  right:0;
-  margin: 0 auto;
-  text-align: center;
-}
 
 .footer {
   height:30px;
@@ -86,138 +126,3 @@ section {
 }
 
 
-
-/*Chuleta Carousel*/
-
-/* prefrences */
-/* size */
-#slideshow{
-  width: 100%;
-  height: 500px;
-}
-#slideshow figure img{
-  max-height: 500px; /* same values = best experience */
-}
-
-/* navigation size */
-#slideshow ul a{
-  width: 15px;
-  height: 15px;
-}
-
-/* colors */
-#slideshow,#slideshow figure{
-  /*background: #1E1E1E; */
-  /* the color of slideshow container */
-}
-#slideshow figure figcaption{
-  /*background: rgba(0,0,0,0.7); */
-  /* the background color of the caption */
-
-  color: black; 
-  /* white; */
-  /* the text color of the caption */
-}
-
-/* navigation colors */
-#slideshow ul a{
-  border: 3px solid gray; /* the border of the navigation rings */
-
-  background: gainsboro; /* the fill color of empty navigation ring */
-}
-#slideshow ul a.slide{
-  background: black; /* the fill color of active */
-}
-#slideshow ul a:hover{
-  background: gray; /* the fill color when the user moves over the navigation */
-}
-
-/* transitions */
-#slideshow figure{ /* transition: start */
-
-  opacity: 0; /* default: transparenty */
-
-  /* -webkit-transform:translateX(100%); /* left in and out */
-  /* transform:translateX(100%); /* left in and out */
-
-  /* -webkit-transform:translateX(-100%); /* right in and out */
-  /* transform:translateX(-100%); /* righ in and out */
-
-  /* -webkit-transform:translateY(-100%); /* top in and out */
-  /* transform:translateY(-100%); /* top in and out */
-
-  /* -webkit-transform:translateY(100%); /* bottom in and out */
-  /* transform:translateY(100%); /* bottom in and out */
-
-}
-#slideshow figure.show{ /* transition: end */
-
-  opacity: 1;/* default: transparenty */
-
-  /* -webkit-transform:translateX(0); /* left in and out */
-  /* transform:translateX(0); /* left in and out */
-
-  /* -webkit-transform:translateX(0); /* right in and out */
-  /* transform:translateX(0); /* right in and out */
-
-  /* -webkit-transform:translateY(0); /* top in and out */
-  /* transform:translateY(0); /* top in and out */
-
-  /* -webkit-transform:translateY(0); /* bottom in and out */
-  /* transform:translateY(0); /* bottom in and out */
-
-}
-
-
-/* slideshow default */
-#slideshow{
-  overflow: hidden;
-  position: relative;
-}
-#slideshow figure{
-  margin: 0;
-  top:0;
-  bottom: 0;
-  pointer-events: none;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-#slideshow figure.show{
-  pointer-events: initial;
-}
-#slideshow figure img{
-  max-width: 100%;
-  display: block;
-  margin: auto;
-}
-#slideshow figure figcaption{
-  padding: 10px;
-  bottom: 50px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-backdrop-filter: blur(10px);
-}
-#slideshow figure figcaption, #slideshow ul, #slideshow figure{
-  position: absolute;
-  right: 0;
-  left: 0;
-  text-align: center;
-}
-/* navigation default */
-#slideshow ul{
-  z-index: 2;
-  margin: 10px;
-  bottom: 0;
-  display: -webkit-flex;
-  display: flex;
-  justify-content: center;
-}
-#slideshow ul a{
-  display: block;
-  margin: 5px 3px;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
