--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,42 +24,35 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.presentacion {
-  display: relative;
-  padding: 15px 0 5px 0;
+
+.icon {
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 3rem;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: rgba(250,250,250,0.8);
+  text-align: center;
+  display: inline;
 }
+
 
 .icon-circle-right:before {
   content: "\ea42";
   z-index: 2;
 }
 
+
 .icon-circle-left:before {
   content: "\ea44";
   z-index: 2;
 }
 
-.icon {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: 3rem;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: gray;
+.icon-circle-left:hover, .icon-circle-right:hover {
+  color:gray;
+  font-size: 5em;
 }
 
-.icon-izq{
-  position: absolute;
-  top:50%;
-  left:0%;
-}
-
-.icon-der{
-  position: absolute;
-  top:50%;
-  right: 0%;
-}
 
 
 body {
@@ -79,9 +72,9 @@ body {
     display: block;
     position: relative;
     text-align: center;
-    border: 1px solid red;
     max-width: 1000px;
     margin: 0 auto;
+    padding-bottom: 20px;
 }
 
 .presentaciones h2  {
@@ -91,12 +84,32 @@ body {
 
 .presentaciones p {
    font-size: 1rem;
-   margin: 0;
+   margin: 0 auto;
+   width:400px;
 }
 
-.presentacion{
-  position: absolute;
+.presentacion {
+  display: relative;
+  padding: 15px 0 5px 0;
 }
+
+.left {
+  position: absolute;
+  top:50%;
+  left:0;
+  z-index: 2;
+  padding-right: 20px;
+}
+
+.right{
+  position: absolute;
+  top:50%;
+  right:0;
+  z-index: 2;
+  padding-left: 20px;
+}
+
+
 
 #slider{
   text-align: center;
@@ -167,19 +180,6 @@ body {
   transform: scale(1.3);
 }
 
-.imagen-izquierda {
-  position: absolute;
-  top: 38%;
-  left:3%;
-  overflow: hidden;
-}
-
-.imagen-derecha {
-  position: absolute;
-  top: 38%;
-  right: 4%;
-  overflow: hidden;
-}
 
 .contenedor {
   margin: 0 auto
@@ -188,9 +188,15 @@ body {
 }
 
 .articulos {
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+}
+
+.articulo {
+  width: 300px;
 }
 
 footer {
