--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,13 @@
   font-style: normal;
 }
 
+@font-face {
+    font-family: "Frosting";
+    font-style: normal;
+    font-weight: normal;
+    src: local("?"), url("../fonts/Frosting-for-Breakfast_regular.woff") format("woff"), url("../fonts/Frosting-for-Breakfast_regular.ttf") format("truetype");
+}
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -24,7 +31,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 .icon {
   font: normal normal normal 14px/1 FontAwesome;
   font-size: 3rem;
@@ -36,12 +42,10 @@
   display: inline;
 }
 
-
 .icon-circle-right:before {
   content: "\ea42";
   z-index: 2;
 }
-
 
 .icon-circle-left:before {
   content: "\ea44";
@@ -53,11 +57,8 @@
   font-size: 5em;
 }
 
-
-
 body {
   height: 100vh;
-  font-size: .65rem;
   margin:0;
   height: 100vh;
   /*background-color: rgb(252, 243, 207); */
@@ -65,6 +66,8 @@ body {
   background-size: cover;
   display: flex;
   flex-direction: column;
+  font-family: 'Frosting';
+  color:rgb(128,0,0);
 }
 
 .presentaciones {
@@ -72,18 +75,16 @@ body {
     display: block;
     position: relative;
     text-align: center;
-    max-width: 1000px;
-    margin: 0 auto;
     padding-bottom: 20px;
 }
 
 .presentaciones h2  {
-  font-size: 1rem;
+  font-size: 2.5rem;
   margin: 0;
 }
 
 .presentaciones p {
-   font-size: 1rem;
+   font-size: 2rem;
    margin: 0 auto;
    width:400px;
 }
@@ -109,8 +110,6 @@ body {
   padding-left: 20px;
 }
 
-
-
 #slider{
   text-align: center;
   position: relative;
@@ -131,15 +130,13 @@ body {
   position: relative;
 }
 
-
 .header img {
   display: inline-block;
 }
 
-
 .header span {
   display: block;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 .header .menu {
@@ -168,6 +165,7 @@ body {
 
 .header .menu li a {
   color:rgb(128,0,0);
+  font-size:2em;
   display: block;
   list-style: none;
   text-decoration: none;
@@ -185,6 +183,22 @@ body {
   margin: 0 auto
   border: 1px solid red;
   max-width: 1000px;
+}
+
+.contenedor h1 {
+  font-size: 4em;
+}
+
+
+.contenedor h2 {
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.contenedor p {
+  font-size: 1.5em;
+  margin: 0 0 20px 0;
+  line-height: 1em;
 }
 
 .articulos {
