--- a/css/estilos.css
+++ b/css/estilos.css
@@ -89,6 +89,12 @@ body {
    width:400px;
 }
 
+.presentaciones a{
+   color:rgb(128,0,0);
+   text-decoration: none;
+   font-size: 1.4em;
+}
+
 .presentacion {
   display: relative;
   padding: 15px 0 5px 0;
@@ -199,6 +205,10 @@ body {
   font-size: 1.5em;
   margin: 0 0 20px 0;
   line-height: 1em;
+}
+
+.contacto {
+  text-align: center;
 }
 
 .articulos {
