--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: rgba(250,250,250,0.8);
+  color: rgba(119,119,119,0.2);
   text-align: center;
   display: inline;
 }
@@ -54,7 +54,7 @@
 
 .icon-circle-left:hover, .icon-circle-right:hover {
   color:gray;
-  font-size: 5em;
+  font-size: 4em;
 }
 
 body {
@@ -73,7 +73,6 @@ body {
 .presentaciones {
     flex:1;
     display: block;
-    position: relative;
     text-align: center;
     padding-bottom: 20px;
 }
@@ -100,21 +99,10 @@ body {
   padding: 15px 0 5px 0;
 }
 
-.left {
-  position: absolute;
-  top:50%;
-  left:0;
-  z-index: 2;
-  padding-right: 20px;
+.presentacion img {
+  display: inline-block;
 }
 
-.right{
-  position: absolute;
-  top:50%;
-  right:0;
-  z-index: 2;
-  padding-left: 20px;
-}
 
 #slider{
   text-align: center;
